--- a/Mannual/Libreoffice/终端卸载.md
+++ b/Mannual/Libreoffice/终端卸载.md
@@ -4,11 +4,12 @@
 
 1. 点击桌面 Terminal 图标
 2. 输入 `dnf uninstall libreoffice -y` 后回车测试。
+3. 输入 `dnf install libreoffice -y` 后回车测试。
 
 ## 预期结果
 
-LibreOffice 卸载成功。
+LibreOffice 卸载，并重新安装成功。
 
 ## 实际结果
 
-//TODO: 测试
+成功卸载和重新安装。
