Chromium test result

--- a/Mannual/Chromium/终端启动.md
+++ b/Mannual/Chromium/终端启动.md
@@ -3,7 +3,7 @@
 ## 操作步骤
 
 1. 点击桌面 Terminal 图标
-2. 输入 `chromium` 后回车
+2. 输入 `chromium-browser` 后回车
 
 ## 预期结果
 
@@ -11,4 +11,4 @@ Chromium 启动成功。
 
 ## 实际结果
 
-//TODO: 测试
+Chromium 浏览器窗口出现，启动成功。
